noinst_LTLIBRARIES = libAdminParser.la
BUILT_SOURCES = parser.h
AM_YFLAGS = -d -y
AM_LFLAGS = -olex.yy.c
libAdminParser_la_SOURCES = AdminExecutableTreeNode.cpp AdminExecutableTreeNode.h AdminExecutor.cpp AdminExecutor.h AdminLexer.h AdminTreeNode.cpp AdminTreeNode.h ShutdownTreeNode.cpp ShutdownTreeNode.h scanner.ll parser.yy stack.hh location.hh position.hh
INCLUDES=-I$(top_srcdir)/src
