noinst_LTLIBRARIES = libLoximClient.la
libLoximClient_la_SOURCES = Aborter.cpp Aborter.h Authenticator.cpp Authenticator.h ClientConsole.cpp ClientConsole.h ConsoleAuthenticator.cpp ConsoleAuthenticator.h LoximClient.cpp LoximClient.h Lsbql.cpp ReadlineReader.cpp ReadlineReader.h StatementProvider.cpp StatementProvider.h StatementSimpleParser.cpp StatementSimpleParser.h 
INCLUDES=-I$(top_srcdir)/src
