SUBDIRS = Streams Packages Enums
noinst_LTLIBRARIES = libProtocol.la
libProtocol_la_SOURCES = Exceptions.cpp Exceptions.h TCPServer.h TCPServer.cpp ByteBuffer.h ByteBuffer.cpp PackageFactory.h PackageFactory.cpp VarUint.h DataPackageFactory.h DataPackageFactory.cpp PackageFactory.h PackageFactory.cpp 
INCLUDES=-I$(top_srcdir)/src
