noinst_LTLIBRARIES = libQueryExecutor.la
libQueryExecutor_la_SOURCES = BindNames.h ClassGraph.cpp ClassGraph.h EnvironmentStack.cpp EnvironmentStack.h HashMacro.h InterfaceKey.h InterfaceMaps.cpp InterfaceMaps.h InterfaceMatcher.cpp InterfaceMatcher.h InterfaceQuery.cpp InterfaceQuery.h QueryExecutor.cpp QueryExecutor.h QueryResult.cpp QueryResult.h
INCLUDES=-I$(top_srcdir)/src
