noinst_LTLIBRARIES = libQueryExecutor.la
libQueryExecutor_la_SOURCES = BindMap.h  BindMap.cpp BindNames.h ClassGraph.cpp ClassGraph.h EnvironmentStack.cpp EnvironmentStack.h HashMacro.h InterfaceKey.h InterfaceMaps.cpp InterfaceMaps.h InterfaceMatcher.cpp InterfaceMatcher.h InterfaceQuery.cpp InterfaceQuery.h OuterSchema.h OuterSchema.cpp QueryExecutor.cpp QueryExecutor.h QueryResult.cpp QueryResult.h QueryBuilder.h Signatures.h Signatures.cpp QueryBuilder.cpp ExecutorViews.h ExecutorViews.cpp ResultStack.h ResultStack.cpp CommonOperations.h CommonOperations.cpp
INCLUDES=-I$(top_srcdir)/src
