noinst_LTLIBRARIES = libStore.la
libStore_la_SOURCES = Buffer.cpp Buffer.h Classes.cpp DBDataValue.cpp DBDataValue.h DBLogicalID.cpp DBLogicalID.h DBObjectPointer.cpp DBObjectPointer.h DBPhysicalID.cpp DBPhysicalID.h DBStoreManager.cpp DBStoreManager.h File.cpp File.h Interfaces.cpp Map.cpp Map.h Misc.cpp Misc.h NamedItems.cpp NamedItems.h NamedRoots.cpp NamedRoots.h PageManager.cpp PageManager.h PagePointer.cpp PagePointer.h Store.h Struct.h SystemViews.cpp SystemViews.h Views.cpp Views.h 
INCLUDES=-I$(top_srcdir)/src
