noinst_LTLIBRARIES = libSystemStats.la
libSystemStats_la_SOURCES = AllStats.cpp AllStats.h ConfigStats.cpp ConfigStats.h QueriesStats.cpp QueriesStats.h SessionStats.cpp SessionStats.h StoreStats.cpp StoreStats.h SystemStats.cpp SystemStats.h TransactionsStats.cpp TransactionsStats.h 
INCLUDES=-I$(top_srcdir)/src
