add_subdirectory(AdminParser)
add_subdirectory(ARIESLog)
add_subdirectory(CBindings)
add_subdirectory(Client)
add_subdirectory(Config)
add_subdirectory(Errors)
add_subdirectory(Indexes)
add_subdirectory(Lock)
add_subdirectory(Log)
add_subdirectory(Protocol)
add_subdirectory(QueryExecutor)
add_subdirectory(QueryParser)
add_subdirectory(Server)
add_subdirectory(Store)
add_subdirectory(SystemStats)
add_subdirectory(TransactionManager)
add_subdirectory(TypeCheck)
add_subdirectory(Util)
